# lazy_format

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml
lazy_format/: __init__.py  aliases.py  context.py  format.py  formatter.py
tests/: __init__.py  test_lazy_alias_format.py  test_lazy_format.py  test_lazy_formatter.py
