[tool.poetry]
name = "lazy_format"
version = "0.1.0"
description = "Partially applied formatted strings"
authors = ["miphreal <miphreal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miphreal/lazy_format"

[tool.poetry.dependencies]
python = "~3.6 | ~3.7 | ~3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
